--- a/todo.txt
+++ b/todo.txt
@@ -6,8 +6,8 @@ video by view
 video by like
 video thumbnail
 catergories
-Upload status bar
-Uploading(status)
+Upload status bar - done
+Uploading(status) - done
 all videos page
 sort by like
 sort by view
